--- a/.github/workflows/ai-runner-pipelines-fps-test.yaml
+++ b/.github/workflows/ai-runner-pipelines-fps-test.yaml
@@ -5,9 +5,7 @@ on:
     workflows: ["Build ai-runner live pipeline Docker images"]
     types:
       - completed
-  push:
-    paths:
-      - ".github/workflows/ai-runner-pipelines-fps-test.yaml"
+  if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -15,12 +13,13 @@ concurrency:
 
 jobs:
   setup:
-    runs-on: gpu-amd64
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          clean: false
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -32,14 +31,14 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           sudo pip install huggingface_hub[cli,hf_transfer] hf_transfer
-          sudo -E runner/dl_checkpoints.sh
+          sudo -E runner/dl_checkpoints.sh --tensorrt
 
       - name: Install packages
         run: |
           sudo sh -c "apt-get update && apt-get install -y libzmq3-dev && rm -rf /var/lib/apt/lists/*"
 
   run-fps-test:
-    runs-on: gpu-amd64
+    runs-on: ubuntu-latest
     needs: setup
     strategy:
       max-parallel: 1
