--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -34,16 +34,6 @@ RUN cd /comfyui/custom_nodes && \
     cd ComfyUI-Misc-Effects && \
     git checkout c6b360c78611134c3723388170475eb4898ff6b7
 
-# Install ComfyUI-LivePortraitKJ Node (https://github.com/kijai/ComfyUI-LivePortraitKJ)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/kijai/ComfyUI-LivePortraitKJ.git && \
-    cd ComfyUI-LivePortraitKJ && \
-    git checkout 4d9dc6205b793ffd0fb319816136d9b8c0dbfdff && \
-    pip install -r requirements.txt
-# Install ComfyUI-load-image-from-url Node (https://github.com/tsogzark/ComfyUI-load-image-from-url.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/tsogzark/ComfyUI-load-image-from-url.git
-
 RUN pip install torch==2.5.1 torchvision torchaudio tqdm nvidia-ml-py==12.560.30
 
 # Install comfystream (which includes ComfyUI)
@@ -73,6 +63,17 @@ RUN cd /comfyui/custom_nodes && \
     cd ComfyUI-StreamDiffusion && \
     git checkout 032cf631385454ea99772c86377c0437c34ab733 && \
     pip install -r requirements.txt
+
+# Install ComfyUI-LivePortraitKJ Node (https://github.com/kijai/ComfyUI-LivePortraitKJ)
+RUN pip install diffusers==0.30.1
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/kijai/ComfyUI-LivePortraitKJ.git && \
+    cd ComfyUI-LivePortraitKJ && \
+    git checkout 4d9dc6205b793ffd0fb319816136d9b8c0dbfdff && \
+    pip install -r requirements.txt
+# Install ComfyUI-load-image-from-url Node (https://github.com/tsogzark/ComfyUI-load-image-from-url.git)
+RUN cd /comfyui/custom_nodes && \
+git clone https://github.com/tsogzark/ComfyUI-load-image-from-url.git
 
 # Upgrade TensorRT to 10.6.0
 RUN pip uninstall -y tensorrt && \
