--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -64,6 +64,17 @@ RUN cd /comfyui/custom_nodes && \
     git checkout 032cf631385454ea99772c86377c0437c34ab733 && \
     pip install -r requirements.txt
 
+# Install ComfyUI-LivePortraitKJ Node (https://github.com/kijai/ComfyUI-LivePortraitKJ)
+RUN pip install diffusers==0.30.1
+RUN cd /comfyui/custom_nodes && \
+    git clone https://github.com/kijai/ComfyUI-LivePortraitKJ.git && \
+    cd ComfyUI-LivePortraitKJ && \
+    git checkout 4d9dc6205b793ffd0fb319816136d9b8c0dbfdff && \
+    pip install -r requirements.txt
+# Install ComfyUI-load-image-from-url Node (https://github.com/tsogzark/ComfyUI-load-image-from-url.git)
+RUN cd /comfyui/custom_nodes && \
+git clone https://github.com/tsogzark/ComfyUI-load-image-from-url.git
+
 # Upgrade TensorRT to 10.6.0
 RUN pip uninstall -y tensorrt && \
     pip install tensorrt==10.6.0
