--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -80,6 +80,13 @@ RUN cd /comfyui/custom_nodes && \
     git clone https://github.com/emranemran/ComfyUI-FasterLivePortrait && \
     cd ComfyUI-FasterLivePortrait && \
     pip install -r requirements.txt
+RUN git clone https://github.com/SeanWangJS/grid-sample3d-trt-plugin.git /opt/grid-sample3d-trt-plugin && \
+    cd /opt/grid-sample3d-trt-plugin && \
+    sed -i 's/set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES ".*")/set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES "60;70;75;80;86")/' CMakeLists.txt && \
+    mkdir build && cd build && \
+    export PATH=/usr/local/cuda/bin:$PATH && \
+    cmake .. -DTensorRT_ROOT=/usr/include && \
+    make
 
 # Upgrade TensorRT to 10.6.0
 RUN pip uninstall -y tensorrt && \
