--- a/runner/docker/Dockerfile.llm
+++ b/runner/docker/Dockerfile.llm
@@ -36,7 +36,7 @@ RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 
 WORKDIR /app
 
 COPY ./requirements.llm.in /app
-RUN pip-compile requirements.llm.in
+RUN pip-compile requirements.llm.in -o requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN pip install https://github.com/chengzeyi/stable-fast/releases/download/v1.0.3/stable_fast-1.0.3+torch211cu121-cp311-cp311-manylinux2014_x86_64.whl
