update ai-runner pipelines docker build to add llm to build

--- a/.github/workflows/ai-runner-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-pipelines-docker.yaml
@@ -34,6 +34,7 @@ jobs:
           - docker/Dockerfile.segment_anything_2
           - docker/Dockerfile.text_to_speech
           - docker/Dockerfile.audio_to_text
+          - docker/Dockerfile.llm
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
