--- a/.github/workflows/ai-runner-live-pipelines-docker.yaml
+++ b/.github/workflows/ai-runner-live-pipelines-docker.yaml
@@ -83,7 +83,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pipeline: [streamdiffusion, comfyui, liveportrait]
+        pipeline: [streamdiffusion, comfyui]
     steps:
       - name: Check out code
         uses: actions/checkout@v4.1.1
@@ -98,9 +98,6 @@ jobs:
           files_yaml: |
             base_dockerfile:
               - runner/docker/Dockerfile.live-base-${{ matrix.pipeline }}
-            liveportrait:
-              - runner/images/**
-              - runner/requirements-liveportrait.txt
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -120,11 +117,7 @@ jobs:
             github.event_name == 'pull_request' &&
             github.event.pull_request.head.repo.full_name == github.repository &&
             (
-              steps.changed-files.outputs.base_dockerfile_any_changed == 'true' ||
-              (
-                matrix.pipeline == 'liveportrait' &&
-                steps.changed-files.outputs.liveportrait_any_changed == 'true'
-              )
+              steps.changed-files.outputs.base_dockerfile_any_changed == 'true'
             )
           )
         with:
