--- a/runner/docker/Dockerfile.live-app-noop
+++ b/runner/docker/Dockerfile.live-app-noop
@@ -28,7 +28,8 @@ RUN pip install --no-cache-dir \
     aiohttp==3.10.9 \
     pyzmq==26.2.0 \
     nvidia-ml-py==12.560.30 \
-    opencv-python==4.10.0.84
+    opencv-python==4.10.0.84 \
+    psutil==6.0.0
 
 # Set environment variables
 ENV MAX_WORKERS=1
