chore(runner): add GPU parallelism command to dev container
This commit adds the necessary command to the dev container configuration
to enable GPU parallelism for developers.

--- a/runner/.devcontainer/devcontainer.json
+++ b/runner/.devcontainer/devcontainer.json
@@ -10,6 +10,7 @@
 	},
 	"runArgs": [
 		"--gpus=all"
+		// "--shm-size=1g" // Increase shared memory size to 1GB for GPU parallelism.
 	],
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// Configure tool-specific properties.
