docker: Bring back the ln command for models
It should work the same way! Added another one
corresponding to the devcontainer on comfysream.

--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -77,3 +77,5 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/ComfyUI"
+RUN ln -s /models/ComfyUI--models /ComfyUI/models
+RUN ln -s /models/ComfyUI--models/output /ComfyUI/output
