--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -81,7 +81,11 @@ RUN ln -s /models/ComfyUI--models /ComfyUI/models
 RUN ln -s /models/ComfyUI--output /ComfyUI/output
 
 # TODO: Remove. This should come from the base image.
-RUN git clone https://github.com/yondonfu/comfystream.git /comfystream
+RUN git clone https://github.com/yondonfu/comfystream.git /comfystream && \
+    cd /comfystream && \
+    git fetch origin pull/20/head:comfystream-base-image && \
+    git checkout comfystream-base-image
+
 
 # Ensure all the next RUN commands are run in the comfystream conda environment
 RUN echo "source /miniconda3/etc/profile.d/conda.sh && conda activate comfystream" >> ~/.bashrc
