--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -84,7 +84,7 @@ RUN ln -s /models/ComfyUI--output /ComfyUI/output
 RUN git clone https://github.com/pschroedl/comfystream.git /workspace && \
     cd /workspace && \
     git fetch origin && \
-    git checkout c143654af1a78264303f90d67fc2d59a6275f02e
+    git checkout 10_29/build_trt
 
 
 # Ensure all the next RUN commands are run in the comfystream conda environment
