--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -82,7 +82,9 @@ RUN rm -rf /ComfyUI/models && ln -s /models/ComfyUI--models /ComfyUI/models
 RUN rm -rf /ComfyUI/output && ln -s /models/ComfyUI--output /ComfyUI/output
 
 # Ensure all the next RUN commands are run in the comfystream conda environment
-RUN echo "source /miniconda3/etc/profile.d/conda.sh && conda activate comfystream" >> ~/.bashrc
+RUN echo "source /miniconda3/etc/profile.d/conda.sh && conda activate comfystream" >> /conda_activate.sh && \
+    chmod +x /conda_activate.sh
+ENV BASH_ENV=/conda_activate.sh
 SHELL ["/bin/bash", "-c"]
 # Ensure the app run from CMD is also in the comfystream conda environment (just wrap in bash and it will run the .bashrc above)
 ENTRYPOINT ["bash", "-c", "exec /opt/nvidia/nvidia_entrypoint.sh \"$@\"", "--"]
