--- a/runner/docker/Dockerfile.live-base
+++ b/runner/docker/Dockerfile.live-base
@@ -25,7 +25,7 @@ ENV PATH $PYENV_ROOT/shims:$PYENV_ROOT/bin:$PATH
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     autoconf automake build-essential cmake git-core libtool pkg-config wget \
-    nasm yasm zlib1g-dev libpng-dev libx264-dev && \
+    nasm yasm zlib1g-dev libpng-dev libx264-dev libopus-dev libfdk-aac-dev && \
     rm -rf /var/lib/apt/lists/*
 
 # Set up environment variables
@@ -37,15 +37,13 @@ RUN git clone -b n12.2.72.0 --depth 1 https://git.videolan.org/git/ffmpeg/nv-cod
     cd .. && rm -rf nv-codec-headers
 
 # Clone the FFmpeg repository and checkout the latest release
-RUN git clone --branch n7.0.2 --depth 1 https://github.com/FFmpeg/FFmpeg.git ffmpeg
+RUN git clone --branch n7.1 --depth 1 https://github.com/FFmpeg/FFmpeg.git ffmpeg
 
 # Build FFmpeg with static linking and the desired hardware-accelerated features
 RUN cd ffmpeg && \
     ./configure --prefix=/compiled \
-                --pkg-config-flags="--static" \
                 --extra-cflags="-I/ffmpeg_build/include -I/usr/local/cuda/include" \
                 --extra-ldflags="-L/ffmpeg_build/lib -L/usr/local/cuda/lib64" \
-                --extra-libs="-lpthread -lm" \
                 --enable-nonfree \
                 --enable-cuda-nvcc \
                 --enable-cuda \
@@ -53,10 +51,12 @@ RUN cd ffmpeg && \
                 --enable-cuvid \
                 --enable-nvenc \
                 --enable-nvdec \
-                --enable-static \
                 --enable-gpl \
+                --enable-shared \
+                --disable-static \
                 --enable-libx264 \
-                --disable-shared \
+                --enable-libopus \
+                --enable-libfdk-aac \
                 --disable-debug \
                 --disable-doc && \
     make -j$(nproc) && \
