--- a/runner/requirements.live-ai.txt
+++ b/runner/requirements.live-ai.txt
@@ -6,7 +6,7 @@ Pillow==10.3.0
 python-multipart==0.0.9
 uvicorn==0.30.0
 huggingface_hub==0.23.2
-triton==3.1.0
+triton>=2.1.0
 peft==0.11.1
 deepcache==0.1.1
 safetensors==0.4.3
