--- a/runner/docker/Dockerfile.live-app__PIPELINE__
+++ b/runner/docker/Dockerfile.live-app__PIPELINE__
@@ -29,4 +29,8 @@ COPY bench.py /app/bench.py
 
 WORKDIR /app
 
+# Dirty hack to remove excessive logging before this PR is merged
+# https://github.com/hiddenswitch/ComfyUI/pull/28
+RUN sed -i 's/logging.info(f"Loaded {to_load}")//' /miniconda3/envs/comfystream/lib/python3.11/site-packages/comfy/model_management.py
+
 CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
