Fix build errors related to flash_attn

--- a/runner/docker/Dockerfile.audio_to_text
+++ b/runner/docker/Dockerfile.audio_to_text
@@ -3,14 +3,17 @@ FROM ${BASE_IMAGE}
 
 # Install CUDA Toolkit to enable flash attention.
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends cuda-toolkit-12-1 && \
+    apt-get install -y --no-install-recommends \
+    cuda-toolkit-12-1 \
+    g++ && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir \
+    ninja \
     transformers==4.43.3 \
     peft \
     deepcache \
-    flash_attn \
+    flash_attn==2.5.6 \
     pynvml
 
 # Override base working directory to ensure the correct working directory.
