--- a/runner/docker/Dockerfile.text_to_speech
+++ b/runner/docker/Dockerfile.text_to_speech
@@ -3,16 +3,19 @@ FROM ${BASE_IMAGE}
 
 # Install CUDA Toolkit to enable flash attention.
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends cuda-toolkit-12-1 && \
+    apt-get install -y --no-install-recommends \
+    cuda-toolkit-12-1 \
+    g++ && \
     rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir \
+    ninja \
     transformers==4.43.3 \
     peft \
     deepcache \
     soundfile \
     g2p-en \
-    flash_attn \
+    flash_attn==2.5.6 \
     git+https://github.com/huggingface/parler-tts.git@5d0aca9753ab74ded179732f5bd797f7a8c6f8ee
 
 # Override base working directory to ensure the correct working directory.
