docker: Use comfystream base image as base for comfyui pipeline (#405)
* docker: PoC of comfyui with comfystream base img

* docker: Bring back the ln command for models

It should work the same way! Added another one
corresponding to the devcontainer on comfysream.

* docker: Ensure commands are run in right conda env

* dl_checkpoints: Add call to setup_models for ComfyUI

* [DEV-TEST] Add clone of comfystream while we don't update base imaeg

* [DEV-TEST] Use development branch from comfystream

* pull branch with build_trt scripts

* fix typo in branch name

* use commit hash to force reclone

* add docker run build_trt.py to dl_checkpoints

* provide full name for output engine, bump comfystream commit

* bump comfystream commit

* change commit hash to branch name

* docker: Remove extra clone of comfystream

Only download the script we need while it's not there.

* docker: Delete linked folders before linking

* docker: Use BASH_ENV instead of .bashrc to load conda

conda wasn't being loaded for bash -c

* dl_checkpoints: Fix tensorrt output path

* dlc: Move tensorrt to tensorrt function

* dlc: Escpae $stat

* dlc: Fix trt output permissions

* dlc: Double-escape the $stat

* pydeps: Fix triton version to avoid diffusers error

* A couple fixes to have it working E2E

* [DEV-REVERT] Test The SD-1.5 Pipeline

* Revert "pydeps: Fix triton version to avoid diffusers error"

This reverts commit 79ffb53d3a2a7869f4026d59b058e5dd626d5d0f.

* Fix issue with AI_RUNNER_COMFYUI_IMAGE scope

* Fix bugs related to no using live-base image as a base anymore

* add build.sh to simplify comfyui docker builds

* Update readme for building comfyui pipelines

* Fix asyncio compatibility issue

* Fix excessive logging

* Fix build errors related to flash_attn

---------

Co-authored-by: Peter Schroedl <peter_schroedl@me.com>
Co-authored-by: emranemran <emran@livepeer.org>
Co-authored-by: Rafal Leszko 

--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -1,85 +1,90 @@
-ARG BASE_IMAGE=livepeer/ai-runner:live-base
+ARG BASE_IMAGE=livepeer/comfyui-base:latest
 FROM ${BASE_IMAGE}
 
-# Create directory for ComfyUI custom nodes and models
-RUN mkdir -p /comfyui/custom_nodes
+# -----------------------------------------------------------------------------
+# live-base: This section was copied from live-base since we don't use it as base image above
+# -----------------------------------------------------------------------------
 
-# Install required Python version
-ARG PYTHON_VERSION=3.10
-RUN pyenv install $PYTHON_VERSION && \
-    pyenv global $PYTHON_VERSION && \
-    pyenv rehash
+ENV DEBIAN_FRONTEND=noninteractive
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility,video
 
-# Upgrade pip and install required packages
-ARG PIP_VERSION=23.3.2
-ENV PIP_PREFER_BINARY=1
-RUN pip install --no-cache-dir --upgrade pip==${PIP_VERSION} setuptools==69.5.1 wheel==0.43.0
+# Install prerequisites
+RUN apt-get update && \
+    apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev \
+    libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev \
+    xz-utils tk-dev libffi-dev liblzma-dev python3-openssl git runit libzmq3-dev && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install ComfyUI-Depth-Anything-Tensorrt Node (https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/yuvraj108c/ComfyUI-Depth-Anything-Tensorrt.git && \
-    cd ComfyUI-Depth-Anything-Tensorrt && \
-    pip install -r requirements.txt
+# Keep python installation from base image
 
-# Install ComfyUI_RyanOnTheInside (https://github.com/ryanontheinside/ComfyUI_RyanOnTheInside.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/pschroedl/ComfyUI_RyanOnTheInside.git && \
-    cd ComfyUI_RyanOnTheInside && \
-    git checkout c5592719d5188cb6bba81287a8af123637eadf79 && \
-    pip install -r requirements.txt
+# Install ffmpeg
 
-# Install ComfyUI-Misc-Effects ( Starburst ) (https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/ryanontheinside/ComfyUI-Misc-Effects.git && \
-    cd ComfyUI-Misc-Effects && \
-    git checkout c6b360c78611134c3723388170475eb4898ff6b7
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    autoconf automake build-essential cmake git-core libtool pkg-config wget \
+    nasm yasm zlib1g-dev libpng-dev libx264-dev libopus-dev libfdk-aac-dev && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN pip install torch==2.5.1 torchvision torchaudio tqdm nvidia-ml-py==12.560.30
+# Set up environment variables
+ENV NV_CODEC_HEADERS=/usr/local/cuda/include/ffnvcodec/
+RUN git clone -b n12.2.72.0 --depth 1 https://git.videolan.org/git/ffmpeg/nv-codec-headers.git && \
+    cd nv-codec-headers && \
+    make && \
+    make install && \
+    cd .. && rm -rf nv-codec-headers
 
-# Install comfystream (which includes ComfyUI)
-RUN pip install git+https://github.com/yondonfu/comfystream.git
-RUN git clone https://github.com/yondonfu/comfystream.git && \
-    cd comfystream && \
-    pip install -r requirements.txt && \
-    cp -r nodes/tensor_utils /comfyui/custom_nodes/ 
+# Clone the FFmpeg repository and checkout the latest release
+RUN git clone --branch n7.1 --depth 1 https://github.com/FFmpeg/FFmpeg.git ffmpeg
 
-# Install ComfyUI-SAM2-Realtime (https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/pschroedl/ComfyUI-SAM2-Realtime.git && \
-    cd ComfyUI-SAM2-Realtime && \
-    git checkout 4f587443fb2808c4b5b303afcd7ec3ec3e0fbd08 && \
-    pip install -r requirements.txt
+# Build FFmpeg with shared libraries and hardware acceleration
+RUN cd ffmpeg && \
+    ./configure --prefix=/compiled \
+                --extra-cflags="-I/ffmpeg_build/include -I/usr/local/cuda/include" \
+                --extra-ldflags="-L/ffmpeg_build/lib -L/usr/local/cuda/lib64" \
+                --enable-nonfree \
+                --enable-cuda-nvcc \
+                --enable-cuda \
+                --enable-libnpp \
+                --enable-cuvid \
+                --enable-nvenc \
+                --enable-nvdec \
+                --enable-gpl \
+                --enable-shared \
+                --disable-static \
+                --enable-libx264 \
+                --enable-libopus \
+                --enable-libfdk-aac \
+                --disable-debug \
+                --disable-doc && \
+    make -j$(nproc) && \
+    make install && \
+    make distclean
 
-# Install ComfyUI-Florence2-Vision (https://github.com/ad-astra-video/ComfyUI-Florence2-Vision.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/ad-astra-video/ComfyUI-Florence2-Vision.git && \
-    cd ComfyUI-Florence2-Vision && \
-    git checkout 0c624e61b6606801751bd41d93a09abe9844bea7 && \
-    pip install -r requirements.txt
+# Copy the compiled FFmpeg binaries to /usr/local
+RUN cp -R /compiled/* /usr/local/
 
-# Install ComfyUI-StreamDiffusion (https://github.com/pschroedl/ComfyUI-StreamDiffusion.git)
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/pschroedl/ComfyUI-StreamDiffusion.git && \
-    cd ComfyUI-StreamDiffusion && \
-    git checkout f93b98aa9f20ab46c23d149ad208d497cd496579 && \
-    pip install -r requirements.txt
+# Clean up APT cache to reduce image size
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Install ComfyUI-LivePortraitKJ Node (https://github.com/kijai/ComfyUI-LivePortraitKJ)
-RUN pip install diffusers==0.30.1
-RUN cd /comfyui/custom_nodes && \
-    git clone https://github.com/kijai/ComfyUI-LivePortraitKJ.git && \
-    cd ComfyUI-LivePortraitKJ && \
-    git checkout 4d9dc6205b793ffd0fb319816136d9b8c0dbfdff && \
-    pip install -r requirements.txt
-# Install ComfyUI-load-image-from-url Node (https://github.com/tsogzark/ComfyUI-load-image-from-url.git)
-RUN cd /comfyui/custom_nodes && \
-git clone https://github.com/tsogzark/ComfyUI-load-image-from-url.git
+# -----------------------------------------------------------------------------
+# live-base: End of section
+# -----------------------------------------------------------------------------
 
+# TODO: Delete if not needed
 # Upgrade TensorRT to 10.6.0
-RUN pip uninstall -y tensorrt && \
-    pip install tensorrt==10.6.0
+# RUN pip uninstall -y tensorrt && \
+#     pip install tensorrt==10.6.0
 
 # Set up ComfyUI workspace
-ENV COMFY_UI_WORKSPACE="/comfyui"
-RUN ln -s /models/ComfyUI--models /comfyui/models
-# TODO: Consider linking the custom nodes directory as well and set those up in the host, similar to the models directory
+ENV COMFY_UI_WORKSPACE="/ComfyUI"
+ENV PYTHONPATH=/ComfyUI:${PYTHONPATH}
+RUN rm -rf /ComfyUI/models && ln -s /models/ComfyUI--models /ComfyUI/models
+RUN rm -rf /ComfyUI/output && ln -s /models/ComfyUI--output /ComfyUI/output
+
+# Ensure all the next RUN commands are run in the comfystream conda environment
+RUN echo "source /miniconda3/etc/profile.d/conda.sh && conda activate comfystream" >> /conda_activate.sh && \
+    chmod +x /conda_activate.sh
+ENV BASH_ENV=/conda_activate.sh
+SHELL ["/bin/bash", "-c"]
+# Ensure the app run from CMD is also in the comfystream conda environment (just wrap in bash and it will run the .bashrc above)
+ENTRYPOINT ["bash", "-c", "exec /opt/nvidia/nvidia_entrypoint.sh \"$@\"", "--"]
