--- a/runner/docker/Dockerfile.live-app__PIPELINE__
+++ b/runner/docker/Dockerfile.live-app__PIPELINE__
@@ -13,6 +13,8 @@ RUN apt-get update && apt-get install -y \
 # Install any additional Python packages
 COPY requirements.live-ai.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
+# TODO: Figure out a way to have this in requirements file
+RUN pip install --no-cache-dir triton==3.1.0
 
 # Set environment variables
 ENV MAX_WORKERS=1
@@ -26,5 +28,9 @@ COPY images/ /app/images
 COPY bench.py /app/bench.py
 
 WORKDIR /app
+
+# Dirty hack to remove excessive logging before this PR is merged
+# https://github.com/hiddenswitch/ComfyUI/pull/28
+RUN sed -i 's/logging.info(f"Loaded {to_load}")//' /miniconda3/envs/comfystream/lib/python3.11/site-packages/comfy/model_management.py
 
 CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
