--- a/runner/docker/Dockerfile.live-app__PIPELINE__
+++ b/runner/docker/Dockerfile.live-app__PIPELINE__
@@ -33,4 +33,7 @@ WORKDIR /app
 # https://github.com/hiddenswitch/ComfyUI/pull/28
 RUN sed -i 's/logging.info(f"Loaded {to_load}")//' /miniconda3/envs/comfystream/lib/python3.11/site-packages/comfy/model_management.py
 
+# Remove ComfyUI Manager node, because it is not needed for this application and it takes 10s additional time to start up
+RUN rm -r /ComfyUI/custom_nodes/ComfyUI-Manager
+
 CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
