--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -78,6 +78,7 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/ComfyUI"
 ENV PYTHONPATH=/ComfyUI:${PYTHONPATH}
+RUN mkdir -p /ComfyUI
 RUN rm -rf /ComfyUI/models && ln -s /models/ComfyUI--models /ComfyUI/models
 RUN rm -rf /ComfyUI/output && ln -s /models/ComfyUI--output /ComfyUI/output
 
