chore: fix dev container paths
This commit ensures that the dev container config has the right paths
now that the worker has moved out of this repository in #396.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,9 @@
 	"name": "ai-runner",
 	// Image to use for the dev container. More info: https://containers.dev/guide/dockerfile.
 	"build": {
-		"dockerfile": "../Dockerfile",
+		"dockerfile": "../runner/Dockerfile",
 		// "dockerfile": "../docker/Dockerfile.text_to_speech",
-		"context": ".."
+		"context": "../runner"
 	},
 	"runArgs": [
 		"--gpus=all"
