--- a/runner/docker/Dockerfile.live-app__PIPELINE__
+++ b/runner/docker/Dockerfile.live-app__PIPELINE__
@@ -36,4 +36,7 @@ RUN sed -i 's/logging.info(f"Loaded {to_load}")//' /miniconda3/envs/comfystream/
 # Remove ComfyUI Manager node, because it is not needed for this application and it takes 10s additional time to start up
 RUN rm -r /ComfyUI/custom_nodes/ComfyUI-Manager
 
+ARG GIT_SHA
+ENV GIT_SHA=$GIT_SHA
+
 CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
