--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=livepeer/comfyui-base:0.0.2-ai-runner
+ARG BASE_IMAGE=livepeer/comfyui-base:ai-runner-bd51d4e
 FROM ${BASE_IMAGE}
 
 # -----------------------------------------------------------------------------
@@ -72,7 +72,7 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set up ComfyUI workspace
 ENV COMFY_UI_WORKSPACE="/workspace/ComfyUI"
-ENV PYTHONPATH=/workspace/ComfyUI:${PYTHONPATH}
+ENV PYTHONPATH=/workspace/ComfyUI:${PYTHONPATH:-}
 RUN mkdir -p /workspace/ComfyUI
 RUN rm -rf /workspace/ComfyUI/models && ln -s /models/ComfyUI--models /workspace/ComfyUI/models
 RUN rm -rf /workspace/ComfyUI/output && ln -s /models/ComfyUI--output /workspace/ComfyUI/output
