--- a/runner/docker/Dockerfile.live-app-noop
+++ b/runner/docker/Dockerfile.live-app-noop
@@ -23,7 +23,7 @@ RUN ls /usr/local/lib && ls /usr/local/lib/pkgconfig && ls -lha /usr/local/bin &
 
 # Install any additional Python packages
 RUN pip install --no-cache-dir \
-    uvicorn==0.30.0 \
+    uvicorn==0.34.0 \
     fastapi==0.111.0 \
     numpy==1.26.4 \
     torch==2.5.1 \
@@ -51,4 +51,4 @@ COPY bench.py /app/bench.py
 
 WORKDIR /app
 
-CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "", "--port", "8000"]
