--- a/runner/docker/Dockerfile.text_to_speech
+++ b/runner/docker/Dockerfile.text_to_speech
@@ -24,4 +24,4 @@ WORKDIR /app
 # Copy app directory to avoid rebuilding the base image during development.
 COPY app/ /app/app
 
-CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--log-config", "app/cfg/uvicorn_logging_config.json", "--host", "", "--port", "8000"]
