--- a/runner/docker/Dockerfile.live-base-comfyui
+++ b/runner/docker/Dockerfile.live-base-comfyui
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=livepeer/comfyui-base:0.0.1
+ARG BASE_IMAGE=livepeer/comfyui-base:ai-runner-bd51d4e
 FROM ${BASE_IMAGE}
 
 # -----------------------------------------------------------------------------
@@ -70,20 +70,15 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # live-base: End of section
 # -----------------------------------------------------------------------------
 
-# TODO: Delete if not needed
-# Upgrade TensorRT to 10.6.0
-# RUN pip uninstall -y tensorrt && \
-#     pip install tensorrt==10.6.0
-
 # Set up ComfyUI workspace
-ENV COMFY_UI_WORKSPACE="/ComfyUI"
-ENV PYTHONPATH=/ComfyUI:${PYTHONPATH}
-RUN mkdir -p /ComfyUI
-RUN rm -rf /ComfyUI/models && ln -s /models/ComfyUI--models /ComfyUI/models
-RUN rm -rf /ComfyUI/output && ln -s /models/ComfyUI--output /ComfyUI/output
+ENV COMFY_UI_WORKSPACE="/workspace/ComfyUI"
+ENV PYTHONPATH=/workspace/ComfyUI:${PYTHONPATH:-}
+RUN mkdir -p /workspace/ComfyUI
+RUN rm -rf /workspace/ComfyUI/models && ln -s /models/ComfyUI--models /workspace/ComfyUI/models
+RUN rm -rf /workspace/ComfyUI/output && ln -s /models/ComfyUI--output /workspace/ComfyUI/output
 
 # Ensure all the next RUN commands are run in the comfystream conda environment
-RUN echo "source /miniconda3/etc/profile.d/conda.sh && conda activate comfystream" >> /conda_activate.sh && \
+RUN echo "source /workspace/miniconda3/etc/profile.d/conda.sh && conda activate comfystream" >> /conda_activate.sh && \
     chmod +x /conda_activate.sh
 ENV BASH_ENV=/conda_activate.sh
 SHELL ["/bin/bash", "-c"]
