ensure onnxruntime-gpu version matches onnx

--- a/runner/docker/Dockerfile.live-app__PIPELINE__
+++ b/runner/docker/Dockerfile.live-app__PIPELINE__
@@ -11,10 +11,13 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install any additional Python packages
+
 COPY requirements.live-ai.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 # TODO: Figure out a way to have this in requirements file
 RUN pip install --no-cache-dir triton==3.1.0
+RUN pip uninstall -y onnx onnxruntime onnxruntime-gpu
+RUN pip install onnx==1.17.0 onnxruntime-gpu==1.17.0
 
 # Set environment variables
 ENV MAX_WORKERS=1
